bootstrap/argocd/argocd-repo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
      - command:
        - sh
        - -c
        - entrypoint.sh argocd-repo-server --redis argocd-redis:6379
        name: argocd-repo-server
        resources: {}
        volumeMounts:
        - mountPath: /usr/local/bin/argocd-vault-plugin
          name: custom-tools
          subPath: argocd-vault-plugin
        - mountPath: /usr/local/bin/helm
          name: custom-tools
          subPath: helm
      - name: cmp
        command:
         - sh
         - -c
         - /var/run/argocd/argocd-cmp-server # Entrypoint should be Argo CD lightweight CMP server i.e. argocd-cmp-server
        image: quay.io/argoproj/argocd:v2.5.2  # This can be off-the-shelf or custom-built image
        resources: {}
        securityContext:
          runAsNonRoot: true
          runAsUser: 999
        volumeMounts:
          - mountPath: /var/run/argocd
            name: var-files
          - mountPath: /home/argocd/cmp-server/plugins
            name: plugins
          # Remove this volumeMount if you've chosen to bake the config file into the sidecar image.
          - mountPath: /home/argocd/cmp-server/config/plugin.yaml
            subPath: plugin.yaml
            name: cmp-avp-helm
          # Starting with v2.4, do NOT mount the same tmp volume as the repo-server container. The filesystem separation helps 
          # mitigate path traversal attacks.
          - mountPath: /tmp
            name: cmp-avp-helm-tmp
          - mountPath: /usr/local/bin/helm
            name: custom-tools
            subPath: helm
          - mountPath: /usr/local/bin/argocd-vault-plugin
            name: custom-tools
            subPath: argocd-vault-plugin
      volumes:
      - emptyDir: {}
        name: custom-tools
      - configMap:
          name: cmp-avp-helm
        name: cmp-avp-helm
      - emptyDir: {}
        name: cmp-avp-helm-tmp
